--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 
 /* Your CSS Code here. */
 .holder{
-	display:flex-wrap;
+	display:flex;
+	flex-wrap:wrap;
 	justify-content:space-between;
 }
 .eg1{
